--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                     
                                  <a href="https://instagram.com/mikoardana" target="_blank"><i class="fab fa-instagram"></i></a>
                                  <a href="https://github.com/mikoardana" target="_blank"><i class="fab fa-github"></i></a>
+                                 <a href="https://twitter.com/mikoardana23" target="_blank"><i class="fab fa-twitter"></i></a>
                                                               </div>
                          </div>
                          <a href="#about">
