--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                                         <h1>ABOUT ME</h1>
                             <span class="span"></span>
                         </div>
-                        <p>My name is Miko Ardana, I am a web developer, Indonesia. I have rich experience in website design and build and customization, also I'm good at Searching Website Vulnerabilities.</p>
+                        <p>Nama saya Miko Ardana, Saya berasal dari Pekanbaru , Riau. Saya seorang mahasiwa dari kampus Unilak Lancang Kuning. Saya mengambil Prodi Teknik Informatika. </p>
                     </div>
                 </div>
                 <!-- <div class="col-lg-4">
@@ -144,33 +144,33 @@
                         <div class="skills-progress-bar">
                                                         <div class="single-progress-bar">
                                 <div class="progressbar-label">
-                                    <h5>Html <span class="f-right">80%</span></h5>
+                                    <h5>Html <span class="f-right">10%</span></h5>
                                     <div class="progress">
-                                        <div class="progress-bar w-80" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar w-10" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
                                                         <div class="single-progress-bar">
                                 <div class="progressbar-label">
-                                    <h5>Css <span class="f-right">75%</span></h5>
+                                    <h5>Css <span class="f-right">10%</span></h5>
                                     <div class="progress">
-                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar w-10" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
                                                         <div class="single-progress-bar">
                                 <div class="progressbar-label">
-                                    <h5>Js <span class="f-right">50%</span></h5>
+                                    <h5>Js <span class="f-right">10%</span></h5>
                                     <div class="progress">
-                                        <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar w-10" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
                                                         <div class="single-progress-bar">
                                 <div class="progressbar-label">
-                                    <h5>PHP <span class="f-right">75%</span></h5>
+                                    <h5>PHP <span class="f-right">10%</span></h5>
                                     <div class="progress">
-                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar w-10" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -200,21 +200,21 @@
                             <h3>Web Developer</h3>
                             <div class="expreience-band">
                                 <i class="fab fa-dribbble"></i>
-                                <span>2020 / 2021</span>
+                                <span>2022 / 2023</span>
                             </div>
-                            <p>A web developer is a web program maker by writing complex lines of code, using various programming languages. Web developers basically have to take a natural human language, like English, and translate it into a language that computers can understand, like Python or HTML.</p>
+                            <p>Jadi saya tidak memiliki pengalaman untuk membuat website dan saat ini saya pengen mempelajari dunia pemprograman.</p>
                         </div>
                     </div>
                 </div>
                                <div class="col-lg-6 mb-30">
                     <div class="single-resume">
                         <div class="single-resume-card">
-                            <h3>Bug Hunter</h3>
+                            <h3>Plan</h3>
                             <div class="expreience-band">
-                                <i class="fab fa-twitter"></i>
-                                <span>2021 / 2022</span>
+                                <i class="fab fa-whatsapp"></i>
+                                <span>2023 / 2025</span>
                             </div>
-                            <p>The bug bounty program in Indonesia better known as "Bug hunter" is a deal offered by many websites, organizations, and software developers where individuals can receive recognition and compensation[1] for reporting bugs, relating to exploits and security vulnerabilities.</p>
+                            <p>Disini saya kedepannya ingin mempelajari lebih mendalam untuk pemprograman dan ingin membuat sebuah bot .</p>
                         </div>
                     </div>
                 </div>
@@ -369,6 +369,7 @@
                                   
                                <li><a href="https://instagram.com/mikoardana" target="_blank"><i class="fab fa-instagram"></i></a></li>
                                <li><a href="https://github.com/mikoardana" target="_blank"><i class="fab fa-github"></i></a></li>
+                               <li><a href="https://twitter.com/mikoardana23" target="_blank"><i class="fab fa-twitter"></i></a></li>
                                                           </ul>
                        </nav>
                    </div>
